# SFLA

./: Final System C3.sln  README.md
Final System C3/: CMakeLists.txt  Controller.h  Custom.cpp  EvolutionModule.cpp  EvolutionModule.h  Final System C3.rar  Final System C3.vcxproj  Final System C3.vcxproj.filters  FitnessEvaluator.cpp  FitnessEvaluator.h  FitnessGenerator.cpp  FitnessGenerator.h  Frog.cpp  Frog.h  FrogGeneration.vcd  FrogGenerator.cpp  FrogGenerator.h  MemplexPartition.cpp  MemplexPartition.h  ProbabilityCalculator.cpp  ProbabilityCalculator.h  SFLA.cpp  SFLA.h  items_data.txt  main.cpp  matlab_frog_generation.m  monitor.h  random_generation.txt  software_input.m  solution_comparison.txt  solution_comparison_matlab.m
Final System C3/cc/: Makefile  SFLA.cc  SFLA.h
